# sap_cloud_client

./: .clang-format  .gitignore  AndroidManifest.xml  CMakeLists.txt  build.gradle
include/sap_cloud_client/: api_client.h  drive_screen.h  main_window.h  notes_screen.h  smart_text_edit.h  ssh_auth.h  theme.h  types.h
res/values/: styles.xml
resources/: resources.qrc
src/: api_client.cpp  drive_screen.cpp  main.cpp  main_window.cpp  notes_screen.cpp  smart_text_edit.cpp  ssh_auth.cpp
